--- a/MicroML.AST/MicroML.AST.fsproj
+++ b/MicroML.AST/MicroML.AST.fsproj
@@ -3,11 +3,15 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
-    <RootNamespace>cs510_project3_webapp</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="Program.fs" />
+	<Compile Include="AST.fs" />
+    <Compile Include="Parser.fs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="FParsec" Version="1.1.1" />
   </ItemGroup>
 
 </Project>
